--- a/app/src/main/res/layout/activity_game_activities.xml
+++ b/app/src/main/res/layout/activity_game_activities.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.GameActivities">
+    tools:context=".activities.GameActivity">
 
     <FrameLayout
         android:id="@+id/frame"
