--- a/app/src/main/res/layout/activity_game_activities.xml
+++ b/app/src/main/res/layout/activity_game_activities.xml
@@ -81,10 +81,10 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <Button
-                android:id="@+id/btnRandomize"
+                android:id="@+id/btnShuffle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="🎲 Randomize" />
+                android:text="🎲 Shuffle" />
         </LinearLayout>
 
         <!-- Overlay Message -->
@@ -110,7 +110,9 @@
         android:id="@+id/navView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:background="?attr/colorSurface"
+        app:itemTextColor="?android:attr/textColorPrimary"
+        app:itemIconTint="?android:attr/textColorPrimary"
         android:layout_gravity="start"
-        app:menu="@menu/nav_menu"
-        android:background="#FFF" />
+        app:menu="@menu/nav_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
