made the text to be left to right and added a name and an icon to the app

--- a/app/src/main/res/layout/activity_game_activities.xml
+++ b/app/src/main/res/layout/activity_game_activities.xml
@@ -5,7 +5,8 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.GameActivity">
+    tools:context=".activities.GameActivity"
+    android:screenOrientation="portrait">
 
     <!-- Main Game Content -->
     <androidx.constraintlayout.widget.ConstraintLayout
