--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,83 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:screenOrientation="portrait">
+    tools:context=".activities.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rubik's Cube"
-        android:textSize="30sp"
-        android:layout_marginTop="40dp"/>
-
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/flBackgroundCube"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:layout_marginLeft="40dp"
-            android:text="Email:"/>
-
-        <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:hint="your Email address"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="40dp"
-            android:text="Password:"/>
-
-        <EditText
-            android:id="@+id/etPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:hint="your password"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
-
-        <Button
-            android:id="@+id/btnLogin"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="login"
-            android:layout_marginRight="10dp"
-            android:textSize="20sp"
-            android:onClick="logInByButton"/>
-
-        <Button
-            android:id="@+id/btnSignUp"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="sign up"
-            android:layout_marginLeft="10sp"
-            android:textSize="20sp"
-            android:onClick="signUpByButton"/>
-
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:background="#111" />
 
 </LinearLayout>
