--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,49 @@
         android:id="@+id/flBackgroundCube"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#111" />
+        android:background="#111">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rubik's Cube - The Game"
+                android:textSize="25sp"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp"
+                android:shadowColor="#000000"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="3"/>
+
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="250dp"
+                android:layout_gravity="center"
+                android:text="Log In"
+                android:textSize="30sp"
+                android:onClick="logInByButton"/>
+
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_gravity="center"
+                android:text="Start Game"
+                android:textSize="20sp"
+                android:onClick="startGameByButton"/>
+
+        </LinearLayout>
+
+
+
+
+    </FrameLayout>
 
 </LinearLayout>
