--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,10 +33,18 @@
                 android:shadowDy="0"
                 android:shadowRadius="3"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="bottom|center_horizontal"
+            android:orientation="vertical">
+
             <Button
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="250dp"
                 android:layout_gravity="center"
                 android:text="Log In"
                 android:textSize="30sp"
@@ -46,6 +54,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
+                android:layout_marginBottom="60dp"
                 android:layout_gravity="center"
                 android:text="Start Game"
                 android:textSize="20sp"
