--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -15,7 +15,8 @@
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:text="Please log in to get your score shared"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textStyle="bold"/>
 
     <ListView
         android:id="@+id/lvScore"
