--- a/app/src/main/res/layout/activity_game_activities.xml
+++ b/app/src/main/res/layout/activity_game_activities.xml
@@ -76,10 +76,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnShuffle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?android:textColorPrimary"
+                android:background="@drawable/cube_button"
+                android:fontFamily="sans-serif-medium"
                 android:text="🎲 Shuffle" />
         </LinearLayout>
 
