--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,31 +43,43 @@
             android:layout_gravity="bottom|center_horizontal"
             android:orientation="vertical">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnLogin"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
                 android:layout_gravity="center"
                 android:text="Log In"
-                android:textSize="25sp"
+                android:textSize="20sp"
+                android:textColor="?android:textColorPrimary"
+                android:background="@drawable/cube_button"
+                android:fontFamily="sans-serif-medium"
                 android:onClick="logInByButton"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnStats"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
                 android:layout_gravity="center"
                 android:text="Statistics"
-                android:textSize="25sp"
+                android:textSize="20sp"
+                android:textColor="?android:textColorPrimary"
+                android:background="@drawable/cube_button"
+                android:fontFamily="sans-serif-medium"
                 android:onClick="openStatsByButton"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnStart"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginBottom="15dp"
                 android:layout_gravity="center"
                 android:text="Start Game"
-                android:textSize="25sp"
+                android:textSize="20sp"
+                android:textColor="?android:textColorPrimary"
+                android:background="@drawable/cube_button"
+                android:fontFamily="sans-serif-medium"
                 android:onClick="startGameByButton"/>
 
         </LinearLayout>
