--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -81,22 +81,28 @@
         android:orientation="horizontal"
         android:layout_marginTop="20dp">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSignUp"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="sign up"
             android:layout_marginRight="10sp"
             android:textSize="20sp"
+            android:textColor="?android:textColorPrimary"
+            android:background="@drawable/cube_button"
+            android:fontFamily="sans-serif-medium"
             android:onClick="signUpByButtonInSignUp"/>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnCancel"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="cancel"
             android:layout_marginLeft="10dp"
             android:textSize="20sp"
+            android:textColor="?android:textColorPrimary"
+            android:background="@drawable/cube_button"
+            android:fontFamily="sans-serif-medium"
             android:onClick="cancelByButton"/>
 
     </LinearLayout>
