--- a/app/src/main/res/layout/login_dialog.xml
+++ b/app/src/main/res/layout/login_dialog.xml
@@ -63,22 +63,28 @@
         android:orientation="horizontal"
         android:layout_marginTop="20dp">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLogin"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="log in"
             android:layout_marginRight="10dp"
             android:textSize="20sp"
+            android:textColor="?android:textColorPrimary"
+            android:background="@drawable/cube_button"
+            android:fontFamily="sans-serif-medium"
             android:onClick="logInByButtonInDialog"/>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnCancel"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="cancel"
             android:layout_marginLeft="10sp"
             android:textSize="20sp"
+            android:textColor="?android:textColorPrimary"
+            android:background="@drawable/cube_button"
+            android:fontFamily="sans-serif-medium"
             android:onClick="cancelLoginDialogByButton"/>
 
     </LinearLayout>
