--- a/app/src/main/res/layout/login_dialog.xml
+++ b/app/src/main/res/layout/login_dialog.xml
@@ -26,6 +26,7 @@
             android:textSize="18sp"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
             android:hint="your Email address"/>
 
         <TextView
@@ -43,6 +44,7 @@
             android:textSize="18sp"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
             android:hint="your password"/>
 
         <TextView
@@ -53,7 +55,8 @@
             android:textColor="@color/black"
             android:text="Don't have an account? Sign up here"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"/>
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"/>
 
     </LinearLayout>
 
@@ -68,7 +71,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="log in"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="2dp"
             android:textSize="20sp"
             android:textColor="?android:textColorPrimary"
             android:background="@drawable/cube_button"
@@ -80,7 +83,7 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="cancel"
-            android:layout_marginLeft="10sp"
+            android:layout_marginLeft="2sp"
             android:textSize="20sp"
             android:textColor="?android:textColorPrimary"
             android:background="@drawable/cube_button"
