--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,88 +5,82 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context=".activities.MainActivity"
-    android:screenOrientation="portrait">
+    android:background="#111">
 
+    <!-- FrameLayout hosts animated background -->
     <FrameLayout
         android:id="@+id/flBackgroundCube"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#111">
+        android:layout_height="match_parent">
 
+        <!-- Title -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center_horizontal"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="40dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rubik's Cube - The Game"
-                android:textSize="25sp"
-                android:textColor="@color/white"
-                android:layout_marginTop="20dp"
+                android:text=" Rubik's Cube \nThe Game"
+                android:textSize="28sp"
+                android:textColor="@android:color/white"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
                 android:shadowColor="#000000"
                 android:shadowDx="0"
                 android:shadowDy="0"
-                android:shadowRadius="3"/>
-
+                android:shadowRadius="5" />
         </LinearLayout>
 
+        <!-- Buttons -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:layout_gravity="bottom|center_horizontal"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="30dp"
+            android:gravity="center">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnLogin"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="center"
+                android:layout_marginBottom="12dp"
                 android:text="Log In"
-                android:textSize="20sp"
-                android:textColor="?android:textColorPrimary"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
                 android:background="@drawable/cube_button"
                 android:fontFamily="sans-serif-medium"
-                android:onClick="logInByButton"/>
+                android:onClick="logInByButton" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnStats"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="center"
+                android:layout_marginBottom="12dp"
                 android:text="Statistics"
-                android:textSize="20sp"
-                android:textColor="?android:textColorPrimary"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
                 android:background="@drawable/cube_button"
                 android:fontFamily="sans-serif-medium"
-                android:onClick="openStatsByButton"/>
+                android:onClick="openStatsByButton" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnStart"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:layout_marginBottom="15dp"
-                android:layout_gravity="center"
                 android:text="Start Game"
-                android:textSize="20sp"
-                android:textColor="?android:textColorPrimary"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
                 android:background="@drawable/cube_button"
                 android:fontFamily="sans-serif-medium"
-                android:onClick="startGameByButton"/>
-
+                android:onClick="startGameByButton" />
         </LinearLayout>
-
-
-
-
     </FrameLayout>
-
 </LinearLayout>
