--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,110 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.SignUpActivity"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:screenOrientation="portrait">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:textSize="30sp"
-        android:layout_marginTop="40dp"/>
+    android:background="?android:attr/windowBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="24dp"
+        android:gravity="center_horizontal">
 
+        <!-- Profile Picture -->
+        <ImageView
+            android:id="@+id/ivProfilePicture"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"
+            android:background="@drawable/gradient_background"
+            android:fontFamily="sans-serif-medium"
+            android:src="@android:drawable/ic_menu_camera"
+            android:contentDescription="Profile Picture"
+            android:scaleType="centerCrop"
+            android:clickable="true"
+            android:focusable="true" />
+
+        <!-- Title -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:layout_marginLeft="40dp"
-            android:text="Name:"/>
+            android:text="Create Account"
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="24dp"
+            android:textColor="?android:textColorPrimary"/>
 
+        <!-- Name -->
         <EditText
             android:id="@+id/etName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:hint="your name"/>
+            android:hint="Full Name"
+            android:textSize="16sp"
+            android:padding="12dp"
+            android:backgroundTint="?attr/colorControlNormal"
+            android:textColor="?android:textColorPrimary"
+            android:layout_marginBottom="16dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="40dp"
-            android:text="Email:"/>
-
+        <!-- Email -->
         <EditText
             android:id="@+id/etEmail"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:hint="your Email address"/>
+            android:hint="Email Address"
+            android:textSize="16sp"
+            android:padding="12dp"
+            android:backgroundTint="?attr/colorControlNormal"
+            android:textColor="?android:textColorPrimary"
+            android:inputType="textEmailAddress"
+            android:layout_marginBottom="16dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="40dp"
-            android:text="Password:"/>
-
+        <!-- Password -->
         <EditText
             android:id="@+id/etPassword"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:hint="your password"/>
+            android:hint="Password"
+            android:textSize="16sp"
+            android:padding="12dp"
+            android:backgroundTint="?attr/colorControlNormal"
+            android:textColor="?android:textColorPrimary"
+            android:inputType="textPassword"
+            android:layout_marginBottom="24dp"/>
+
+        <!-- Buttons -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="8dp">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnSignUp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Sign Up"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/cube_button"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginEnd="8dp"
+                android:onClick="signUpByButtonInSignUp"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnCancel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Cancel"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/cube_button"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginStart="8dp"
+                android:onClick="cancelByButton"/>
+
+        </LinearLayout>
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnSignUp"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="sign up"
-            android:layout_marginRight="10sp"
-            android:textSize="20sp"
-            android:textColor="?android:textColorPrimary"
-            android:background="@drawable/cube_button"
-            android:fontFamily="sans-serif-medium"
-            android:onClick="signUpByButtonInSignUp"/>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnCancel"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="cancel"
-            android:layout_marginLeft="10dp"
-            android:textSize="20sp"
-            android:textColor="?android:textColorPrimary"
-            android:background="@drawable/cube_button"
-            android:fontFamily="sans-serif-medium"
-            android:onClick="cancelByButton"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
