really added profilePictures

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,7 +29,8 @@
             android:contentDescription="Profile Picture"
             android:scaleType="centerCrop"
             android:clickable="true"
-            android:focusable="true" />
+            android:focusable="true"
+            android:onClick="setImageByButton"/>
 
         <!-- Title -->
         <TextView
