--- a/app/src/main/res/layout/stats_list.xml
+++ b/app/src/main/res/layout/stats_list.xml
@@ -7,6 +7,20 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
+    <!-- Profile Picture -->
+    <ImageView
+        android:id="@+id/ivProfilePicture"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@android:drawable/ic_menu_camera"
+        android:scaleType="centerCrop"
+        android:contentDescription="Profile Picture"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_marginEnd="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <!-- Place TextView -->
     <TextView
         android:id="@+id/tvPlace"
@@ -15,10 +29,10 @@
         android:text="Place"
         android:textStyle="bold"
         android:textSize="18sp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toEndOf="@id/ivProfilePicture"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintBaseline_toBaselineOf="@id/tvUsername"/>
 
     <!-- Username TextView -->
     <TextView
@@ -27,11 +41,11 @@
         android:layout_height="wrap_content"
         android:text="Username"
         android:textSize="20sp"
-        android:layout_marginStart="10dp"
+        android:textColor="?android:textColorPrimary"
         app:layout_constraintStart_toEndOf="@id/tvPlace"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread" />
+        app:layout_constraintHorizontal_chainStyle="packed"/>
 
     <!-- Best Time TextView -->
     <TextView
@@ -40,8 +54,10 @@
         android:layout_height="wrap_content"
         android:text="⏱ 00:00"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvPlace"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:textColor="?android:textColorSecondary"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toEndOf="@id/ivProfilePicture"
+        app:layout_constraintTop_toBottomOf="@id/tvUsername"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
