--- a/app/src/main/res/drawable/cube_button.xml
+++ b/app/src/main/res/drawable/cube_button.xml
@@ -2,8 +2,8 @@
     <!-- Pressed state -->
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <gradient android:startColor="#B388FF"/>  <!-- Lighter purple -->
-            <gradient android:endColor="#7C4DFF"/>    <!-- Rich purple -->
+            <gradient android:startColor="#B388FF"/>
+            <gradient android:endColor="#7C4DFF"/>
             <gradient android:angle="45"/>
             <corners android:radius="25dp"/>
             <stroke android:width="2dp" android:color="#9575CD"/> <!-- Border -->
@@ -13,11 +13,11 @@
     <!-- Default state -->
     <item>
         <shape android:shape="rectangle">
-            <gradient android:startColor="#EECCF2"/>  <!-- Soft pastel lavender -->
-            <gradient android:endColor="#AD8FE6"/>    <!-- Gentle purple-gray -->
+            <gradient android:startColor="#EECCF2"/>
+            <gradient android:endColor="#AD8FE6"/>
             <gradient android:angle="45"/>
             <corners android:radius="25dp"/>
-            <stroke android:width="2dp" android:color="#AF96DE"/>
+            <stroke android:width="2dp" android:color="#AF96DE"/> <!-- Border -->
         </shape>
     </item>
 </selector>
