--- a/app/src/main/res/drawable-night/cube_button.xml
+++ b/app/src/main/res/drawable-night/cube_button.xml
@@ -2,9 +2,9 @@
     <!-- Pressed state -->
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="#424242"/> <!-- Darker gray for press effect -->
+            <solid android:color="#424242"/>
             <corners android:radius="25dp"/>
-            <stroke android:width="2dp" android:color="#616161"/> <!-- Lighter gray border -->
+            <stroke android:width="2dp" android:color="#616161"/> <!-- Border -->
         </shape>
     </item>
 
@@ -16,7 +16,7 @@
                 android:endColor="#111111"
                 android:angle="45"/>
             <corners android:radius="25dp"/>
-            <stroke android:width="2dp" android:color="#888888"/>
+            <stroke android:width="2dp" android:color="#888888"/> <!-- Border -->
         </shape>
     </item>
 </selector>
