--- a/app/src/main/res/layout/activity_game_activities.xml
+++ b/app/src/main/res/layout/activity_game_activities.xml
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <!-- Menu Button (Hamburger icon) -->
+            <!-- Menu Button -->
             <ImageButton
                 android:id="@+id/btnMenu"
                 android:layout_width="wrap_content"
@@ -87,22 +87,6 @@
                 android:text="🎲 Shuffle" />
         </LinearLayout>
 
-        <!-- Overlay Message -->
-        <TextView
-            android:id="@+id/statusOverlay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Solved!"
-            android:textSize="32sp"
-            android:textColor="#FFFFFF"
-            android:background="#AA000000"
-            android:padding="16dp"
-            android:visibility="gone"
-            android:alpha="0"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Navigation Drawer Content -->
